--- a/profile company.html
+++ b/profile company.html
@@ -9,7 +9,7 @@
  
   <div class="header">
     <a href="#" class="logo">ELDIA(paradis island</a>
-    <audio src="SNK.mp3" autoplay controls></audio>
+    <audio src="SNK.mp3" "autoplay controls"></audio>
     <a href="#" class="login">Login</a>
   </div>
   <div class="slider slider-1">
